--- a/index.css
+++ b/index.css
@@ -34,10 +34,19 @@ h1 {
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 0.6rem;
 }
 .log2 {
     display: flex;
     flex-direction: column;
+    gap: 0.5rem;
+}
+button a {
+    text-decoration: none;
+    font-size: 1rem;
+    font-family: "Antic";
+    font-weight: 400;
+    padding: 1rem 0.5rem;
 }
 .navbar {
     display: flex;
@@ -48,16 +57,6 @@ h1 {
     background-color: rgb(152, 191, 100);
     flex-wrap: wrap;
 }
-.options {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 100vw;
-    flex-wrap: wrap;
-}
-img {
-    width: 13vw;
-}
 .navbar>a {
     color: rgb(110, 49, 5);
     /* padding: 1rem; */
@@ -66,26 +65,35 @@ img {
     font-weight: 600;
     font-size: 1.2rem;
     padding: 1.5rem 5rem;
-
 }
-.options span {
-    font-family: "Cinzel";
-    font-weight: 500;
-    font-size: 1.5rem;
-    /* color: floralwhite; */
+main {
+    padding: 3rem 0;
+}
+.options {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100vw;
+    flex-wrap: wrap;
 }
 .options a {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-decoration: none;
+    position: relative;
 }
-main {
-    padding: 3rem 0;
+img {
+    width: 13vw;
 }
-button a {
-    text-decoration: none;
-    font-size: 1rem;
-    font-family: "Antic";
-    font-weight: 400;
+.options span {
+    font-family: "Cinzel";
+    font-weight: 500;
+    font-size: 1.5rem;
+    color: rgb(194, 160, 160);
+    position: absolute;
+    top: 6.1rem;
+    /* background-color: rgba(0, 0, 0, 0.432); */
+    /* padding: 0.5rem 2.3rem; */
+    
 }
