added sold and footer

--- a/index.css
+++ b/index.css
@@ -329,7 +329,8 @@ td a {
  #abuotus {
     display: flex;
     justify-content: space-between;
-    padding: 2rem 4rem;
+    padding: 3rem;
+    padding-top: 5rem;
     gap: 1.5rem;
  }
 
@@ -380,4 +381,89 @@ border-style: solid;
     font-size: 2rem;
     color: rgb(77, 34, 19);
     font-family: "Bebas Neue" , serif;
+}
+
+#sold {
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#sold>div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+#sold img {
+    width: 15rem;
+    border-top-left-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
+
+}
+
+.sol {
+    display: flex;
+    flex-direction: column;
+    border: 4px rgb(126, 69, 43) double;
+    border-radius: 1.5rem;
+}
+
+footer {
+    background-color: #184042;
+    display: flex;
+    flex-direction: column;
+    /* padding-bottom: 0; */
+}
+.foo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 3rem;
+}
+
+.foo>div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+}
+
+.foo span {
+    font-family: "Antic" , serif;
+    font-weight: 300;
+    font-size: 0.7rem;
+    color: whitesmoke;
+}
+.foo span:hover {
+    font-family: "Antic" , serif;
+    font-weight: 300;
+    font-size: 0.7rem;
+    color: whitesmoke;
+    text-decoration: underline;
+}
+.foo h4 {
+    font-family: "Bebas Neue" , serif;
+    color: rgb(166,122,78);
+    font-weight: 100;
+    font-size: 1.3rem;
+}
+h3 {
+    font-family: "Baskervville SC" , serif;
+    color:bisque;
+    font-weight: 200;
+    font-size: 1.6rem;
+}
+.last {
+    display: flex;
+    justify-content: center;
+    background-color: beige;
+    color: gray;
+    width: 100%;
+    padding: 0.5rem;
+}
+
+.s1 {
+    text-decoration: underline;
 }
