added lighting page

--- a/index.css
+++ b/index.css
@@ -399,6 +399,7 @@ border-style: solid;
 
 #sold img {
     width: 15rem;
+    height: 19rem;
     border-top-left-radius: 1.5rem;
     border-top-right-radius: 1.5rem;
 
