--- a/index.css
+++ b/index.css
@@ -62,6 +62,7 @@ h1 {
     border-radius: 0.4rem;
     padding: 0.5rem 0;
     border: 1.5px black solid;
+    transition-duration: 1s;
 }
 
 button a {
@@ -82,6 +83,7 @@ button a {
     font-weight: 500;
     padding: 1rem 0.5rem;
     color: wheat;
+    transition-duration: 0.5s;
 }
 
 .navbar {
@@ -103,6 +105,7 @@ button a {
     font-weight: 500;
     font-size: 1.2rem;
     padding: 1.3rem 4rem;
+    transition-duration: 0.3s;
 }
 
 .navbar>a:hover {
@@ -149,7 +152,14 @@ main {
 }
 
 .options a:hover span {
-    background-color: rgba(0, 0, 0, 0.568);
+    width: 15rem;
+    height: 20rem;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top:0;
+    border-radius: 1rem;
+    justify-content: center;
 }
 
 .Carpet {
@@ -158,8 +168,11 @@ main {
     font-size: 2rem;
     color: rgb(202, 174, 174);
     position: absolute;
-    top: 8rem;
-    padding: 1rem 3.7rem;
+    top: 7.65rem;
+    padding: 1rem 0rem;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.658);
+    width: 15rem; 
 }
 
 .lighting {
@@ -168,8 +181,11 @@ main {
     font-size: 2rem;
     color: rgb(221, 204, 204);
     position: absolute;
-    top: 8rem;
-    padding: 1rem 2.75rem;
+    top: 7.65rem;
+    padding: 1rem 0rem;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.658);
+    width: 15rem;
 }
 .Jewellery {
     font-family: "Cinzel" , serif;
@@ -177,8 +193,24 @@ main {
     font-size: 2rem;
     color: rgb(221, 204, 204);
     position: absolute;
-    top: 8rem;
-    padding: 1rem 2.25rem;
+    top: 7.65rem;
+    padding: 1rem 0rem;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.658);
+    width: 15rem;
+}
+
+.Decoration {
+    font-family: "Cinzel" , serif;
+    font-weight: 600;
+    font-size: 2rem;
+    color: rgb(221, 204, 204);
+    position: absolute;
+    top: 7.65rem;
+    padding: 1rem 0rem;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.658);
+    width: 15rem;
 }
 
 .entemail {
