--- a/Decoration.css
+++ b/Decoration.css
@@ -115,27 +115,151 @@ button a {
     background-color: rgb(116, 146, 76);
 }
 
+main {
+    background-color: rgb(255, 238, 196);
+    flex-direction: column;
+}
 
+.firstmain {
+    width: 100%;
+    height: 26.5rem;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: start;
+    gap: 2rem;
+    padding: 2rem 4rem;
+    align-items: center;
+    /* background-color: rgb(216, 166, 109); */
+    background: linear-gradient(rgb(230, 194, 98)25%,rgb(255, 238, 196));
+    /* border-Top: 3px rgb(122, 43, 33) solid; */
+}
 
+.firstmain h2 {
+    font-size: 5.5rem;
+    font-family: "Baskervville SC" , serif;
+    font-weight: 100;
+    /* text-align: center; */
+    color: rgb(138, 87, 11);
+}
 
+.firstmain h2:nth-of-type(2) {
+    margin-left: 4rem;
+}
 
+.firstmain img {
+    width: 23.5rem;
+    border-radius: 2rem;
+    margin-left: 10rem;
+}
 
+.startsell {
+    padding: 2rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: space-around;
+}
 
+.startsell img {
+    width: 16rem;
+    height: 22rem;
+    border-radius: 1rem;
 
+}
 
+.startsell>div {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 18rem;
+    padding: 0.5rem;
+    border: 1px rgba(128, 128, 128, 0) solid;
+}
+.startsell>div:hover {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    width: 18rem;
+    padding: 0.5rem;
+    border: 1px rgba(128, 128, 128, 0.678) solid;
+}
 
+.startsell>div>div {
+    display: flex;
+    flex-direction: column;
+}
 
+.startsell>div>div>span:nth-of-type(1) {
+    font-size: 1.6rem;
+    font-family: "Baskervville SC" , serif;
+    color: rgb(150, 29, 29);
+    font-weight: 600;
+}
 
+.startsell>div>div>span:nth-of-type(2n) {
+    font-size: 1rem;
+    font-family: "Antic" , serif;
+    font-weight: 500;
+    color: rgb(105, 65, 33);
 
+}
 
+.startsell>div>div>span:nth-of-type(3) {
+    font-size: 1rem;
+    font-family: "Bebas Neue" , serif;
+    color: #2d6063;
+}
 
+.startsell>div>div>span:nth-of-type(5) {
+    font-size: 1.3rem;
+    font-family: "Baskervville SC" , serif;
+    color: rgb(100, 52, 17);
+    font-weight: 600;
+}
 
+.newstable {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.7rem;
+    padding: 3.5rem;
+}
 
+table * {
+    padding: 0.5rem 1.5rem;
+    font-size: 1rem;
+    font-family: "Antic" , serif;
+}
 
+th {
+    background-color: rgb(216, 177, 70);
+}
 
+td:first-child {
+    background-color: rgb(230, 194, 98);
+    text-align: center;
+}
 
+td {
+    background-color: rgb(231, 204, 128);
+}
 
-
+tr td:nth-of-type(3) {
+    background-color: rgb(231, 204, 128);
+    display: flex;
+    justify-content: space-between;
+}
+tr td:nth-of-type(4) {
+    background-color: rgb(231, 204, 128);
+    text-align: center;
+}
+td a {
+    text-decoration: none;
+    color: rgb(138, 107, 39);
+    font-weight: 400;
+}
 
 footer {
     background-color: #184042;
