--- a/Lighting.css
+++ b/Lighting.css
@@ -274,3 +274,41 @@ h3 {
 .s1 {
     text-decoration: underline;
 }
+
+@media screen and (max-width: 1000px) {
+    .shop img {
+        display: none;
+    }
+    #abuotus img {
+        display: none;
+    }
+    .title {
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    .firstmain {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 560px) {
+    .newstable {
+        display: none;
+    }
+}
+@media screen and (max-width: 400px) {
+    h1 {
+        font-size: 2rem;
+    }
+    .navbar {
+        position: relative;
+        flex-direction: column;
+        align-items: center;
+    }
+    .navbar a{
+        padding: 0.5rem;
+    }
+    footer {
+        font-size: 0.5rem;
+    }
+}
