--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@ header {
     align-items: center;
     width: 100%;
     padding: 4rem 1rem;
+    flex-wrap: nowrap;
 }
 
 h1 {
@@ -463,6 +464,7 @@ border-style: solid;
     flex-direction: row;
     justify-content: space-evenly;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 #sold img {
@@ -535,4 +537,38 @@ h3 {
 
 .s1 {
     text-decoration: underline;
+}
+@media screen and (max-width: 1000px) {
+    .shop img {
+        display: none;
+    }
+    #abuotus img {
+        display: none;
+    }
+    .title {
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 560px) {
+    .newstable {
+        display: none;
+    }
+}
+@media screen and (max-width: 400px) {
+    h1 {
+        font-size: 2rem;
+    }
+    .navbar {
+        position: relative;
+        flex-direction: column;
+        align-items: center;
+    }
+    .navbar a{
+        padding: 0.5rem;
+    }
+    footer {
+        font-size: 0.5rem;
+    }
 }
